--- a/product/product-css/common-product.css
+++ b/product/product-css/common-product.css
@@ -89,6 +89,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: start;
 }
 
 #visual a {
@@ -129,16 +130,18 @@ main {
   height: auto;
   border-radius: 5px;
   border: #BEB098 2px solid;
-  aspect-ratio: 9 / 16;
   position: relative;
   overflow: hidden;
+  flex-shrink: 0;
 }
 
 .video-wrapper iframe {
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100% !important;
+  border: none;
 }
 
 /* 作品紹介 */
