--- a/product/product-css/product-small.css
+++ b/product/product-css/product-small.css
@@ -125,22 +125,24 @@ main {
   border-radius: 5px;
 }
 
+
 .video-wrapper {
   width: 100%;
   max-width: 350px;
-  height: auto;
   border-radius: 5px;
   border: #BEB098 2px solid;
-  aspect-ratio: 9 / 16;
   position: relative;
   overflow: hidden;
+  flex-shrink: 0;
 }
 
 .video-wrapper iframe {
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100% !important;
+  border: none;
 }
 
 /* 作品紹介 */
