--- a/product/product-css/common-product.css
+++ b/product/product-css/common-product.css
@@ -127,6 +127,7 @@ main {
 .video-wrapper {
   width: 100%;
   max-width: 350px;
+  aspect-ratio: auto;
   border-radius: 5px;
   border: #BEB098 2px solid;
   position: relative;
