--- a/css/top-small.css
+++ b/css/top-small.css
@@ -367,13 +367,16 @@ main {
   margin: auto 0;
   font-size: 20px;
   color: #626343;
-  font-family: "Google Sans Code", monospace;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 700;
+
 }
 
 #name-window p {
   margin: auto 0 auto 16px;
   font-size: 18px;
-  font-family: "Google Sans Code", monospace;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 400;
 }
 
 #me-window {
@@ -392,7 +395,7 @@ main {
   font-size: 20px;
   padding: 8px 0 8px;
   color: #626343;
-  font-family: "Google Sans Code", monospace;
+  font-family: "Noto Sans JP", sans-serif;
   font-weight: 700;
   text-align: center;
 }
@@ -401,8 +404,8 @@ main {
   font-size: 16px;
   padding: 0;
   text-align: justify;
-  font-family: "Google Sans Code", monospace;
-  font-weight: 200;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 400;
 }
 
 /* 資格 */
@@ -426,7 +429,7 @@ main {
   font-size: 20px;
   padding: 8px 0 8px;
   color: #626343;
-  font-family: "Google Sans Code", monospace;
+  font-family: "Noto Sans JP", sans-serif;
   font-weight: 700;
   text-align: center;
 }
@@ -438,8 +441,8 @@ main {
 
 #qualification-window ul li {
   margin: 0 16px;
-  font-family: "Google Sans Code", monospace;
-  font-weight: 200;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 400;
 }
 
 /* スキル */
@@ -463,7 +466,7 @@ main {
   font-size: 20px;
   padding: 8px 0 8px;
   color: #626343;
-  font-family: "Google Sans Code", monospace;
+  font-family: "Noto Sans JP", sans-serif;
   font-weight: 700;
   text-align: center;
 }
@@ -610,14 +613,14 @@ main {
 .ditail h2 {
   margin: 16px auto;
   font-size: 20px;
-  font-family: "Google Sans Code", monospace;
+  font-family: "Noto Sans JP", sans-serif;
   font-weight: 700;
   text-align: center;
 }
 
 .ditail p {
-  font-family: "Google Sans Code", monospace;
-  font-weight: 300;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 400;
   padding: 16px;
 }
 
@@ -645,4 +648,5 @@ footer p {
   display: inline-block;
   margin: 0;
   font-size: 12px;
+  font-family: "Noto Sans JP", sans-serif;
 }
