--- a/product/product-css/common-product.css
+++ b/product/product-css/common-product.css
@@ -68,6 +68,7 @@ main {
 /* 作品紹介 */
 #works-ditail-wrapper {
   display: flex;
+  align-items: flex-start;
   width: 90%;
   margin: 32px auto;
   height: auto;
@@ -128,7 +129,6 @@ main {
 .video-wrapper {
   width: 100%;
   max-width: 350px;
-  aspect-ratio: auto;
   border-radius: 5px;
   border: #BEB098 2px solid;
   position: relative;
