--- a/css/top.css
+++ b/css/top.css
@@ -41,7 +41,7 @@ main {
 }
 
 #top-back-window .window-header {
-  background-color: #B6D56A;
+  background-color: #54b32c;
   padding: 8px 8px;
   display: flex;
 }
@@ -64,7 +64,7 @@ main {
 }
 
 #top-main-window .window-header {
-  background-color: #94D1CA;
+  background-color: #4bd2c9;
   padding: 8px 8px;
   display: flex;
 }
@@ -76,8 +76,12 @@ main {
 }
 
 .top-img {
+  width: 100%;
+  height: 620px;
+}
+
+.top-img img {
   background-color: #fff;
-  height: 100%;
   width: 100%;
   object-fit: cover;
 }
@@ -86,13 +90,14 @@ main {
   position: absolute;
   height: 100%;
   width: 35%;
+  max-width: 286px;
   color: #626343;
   font-size: 22px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #ffffffac;
+  background-color: #ffffff;
 }
 
 .top-text h1 {
@@ -119,8 +124,8 @@ main {
 }
 
 #works-back-window .window-header {
-  background-color: #94D1CA;
-  border: 2px solid #94D1CA;
+  background-color: #4bd2c9;
+  border: 2px solid #4bd2c9;
   padding: 6px 8px;
   display: flex;
 }
@@ -147,7 +152,7 @@ main {
   font-size: 150px;
   margin: 0;
   left: 0;
-  color: #b5dfd9;
+  color: #4bd2c9;
 }
 
 .product-wrap {
@@ -286,8 +291,8 @@ main {
 }
 
 #who-back-window .window-header {
-  background-color: #94D1CA;
-  border: 2px solid #94D1CA;
+  background-color: #4bd2c9;
+  border: 2px solid #4bd2c9;
   padding: 6px 8px;
   display: flex;
 }
@@ -309,7 +314,7 @@ main {
   font-size: 150px;
   margin: 0;
   left: 0;
-  color: #b5dfd9;
+  color: #4bd2c9;
 }
 
 #who-image-window {
@@ -497,8 +502,8 @@ main {
 }
 
 #attempt-back-window .window-header {
-  background-color: #94D1CA;
-  border: 2px solid #94D1CA;
+  background-color: #4bd2c9;
+  border: 2px solid #4bd2c9;
   padding: 6px 8px;
   display: flex;
 }
@@ -518,7 +523,7 @@ main {
   font-size: 150px;
   margin: 0;
   left: 16px;
-  color: #b5dfd9;
+  color: #4bd2c9;
 }
 
 .attempt-ditail-wrapper {
@@ -610,19 +615,45 @@ main {
 
 /* フッター */
 footer {
-  background-color: #B6D56A;
+  background-color: #54b32c;
   width: 100vw;
-  height: 36px;
+  height: auto;
   display: flex;
-  justify-content: end;
-  margin: auto 0;
+  flex-direction: column;
   align-items: center;
-  padding-right: 10%;
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+  gap: 16px;
+  margin: 32px auto 0;
+  padding: 0;
+}
+
+footer ul a {
+  text-decoration: none;
+  color: #fff;
+}
+
+footer ul li {
+  border-bottom: #fff 1px solid;
+}
+
+footer ul li:hover {
+  color: #626343;
+  border-bottom: #626343 1px solid;
 }
 
 footer p {
   display: inline-block;
-  margin: 0;
+  color: #fff;
+  margin: 16px auto;
   font-family: "Noto Sans JP", sans-serif;
+}
 
+footer small {
+  color: #fff;
+  margin: 16px 0 40px;
+  font-family: "Noto Sans JP", sans-serif;
 }
