--- a/css/top-medium.css
+++ b/css/top-medium.css
@@ -42,7 +42,7 @@ main {
 }
 
 #top-back-window .window-header {
-  background-color: #B6D56A;
+  background-color: #54b32c;
   padding: 8px 8px;
   display: flex;
 }
@@ -65,7 +65,7 @@ main {
 }
 
 #top-main-window .window-header {
-  background-color: #94D1CA;
+  background-color: #4bd2c9;
   padding: 8px 8px;
   display: flex;
 }
@@ -77,9 +77,13 @@ main {
 }
 
 .top-img {
+  width: 100%;
+  height: 550px;
+}
+
+.top-img img {
   background-color: #fff;
   height: 100%;
-  width: 100%;
   object-fit: cover;
 }
 
@@ -93,7 +97,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #ffffffac;
+  background-color: #ffffff;
 }
 
 .top-text h1 {
@@ -120,8 +124,8 @@ main {
 }
 
 #works-back-window .window-header {
-  background-color: #94D1CA;
-  border: 2px solid #94D1CA;
+  background-color: #4bd2c9;
+  border: 2px solid #4bd2c9;
   padding: 6px 8px;
   display: flex;
 }
@@ -131,7 +135,8 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 16px 16px;
+  position: relative;
+  padding: 16px 16px 16px;
 }
 
 .works-wrapper {
@@ -142,11 +147,12 @@ main {
 .works-wrapper h1 {
   font-family: "Josefin Sans", sans-serif;
   font-weight: 500;
-  position: absolute;
   font-size: 100px;
   margin: 0;
   left: 0;
-  color: #b5dfd9;
+  color: #4bd2c9;
+  position: absolute;
+  top: 16px;
 }
 
 .product-wrap {
@@ -295,8 +301,8 @@ main {
 }
 
 #who-back-window .window-header {
-  background-color: #94D1CA;
-  border: 2px solid #94D1CA;
+  background-color: #4bd2c9;
+  border: 2px solid #4bd2c9;
   padding: 6px 8px;
   display: flex;
 }
@@ -308,23 +314,24 @@ main {
   justify-content: center;
   gap: 24px;
   position: relative;
-  padding: 32px 0;
+  padding: 16px 0;
 }
 
 #who-back-window .window-body h1 {
   font-family: "Josefin Sans", sans-serif;
-  font-weight: 700;
-  position: absolute;
-  font-size: 200px;
+  font-weight: 500;
+  font-size: 100px;
   margin: 0;
   left: 0;
-  color: #b5dfd9;
+  color: #4bd2c9;
+  position: absolute;
+  top: 16px;
 }
 
 #who-image-window {
   width: 35%;
   height: auto;
-  margin: 150px 0 0 32px;
+  margin: 80px 0 0 32px;
 }
 
 #who-image-window img {
@@ -337,7 +344,7 @@ main {
 
 .me-wrap {
   width: 65%;
-  margin: 150px 24px 24px 0;
+  margin: 80px 24px 24px 0;
   display: flex;
   gap: 16px;
   flex-flow: column;
@@ -506,8 +513,8 @@ main {
 }
 
 #attempt-back-window .window-header {
-  background-color: #94D1CA;
-  border: 2px solid #94D1CA;
+  background-color: #4bd2c9;
+  border: 2px solid #4bd2c9;
   padding: 6px 8px;
   display: flex;
 }
@@ -526,7 +533,7 @@ main {
   font-size: 100px;
   margin: 0;
   left: 0;
-  color: #b5dfd9;
+  color: #4bd2c9;
   position: absolute;
   top: 16px;
 }
@@ -625,19 +632,45 @@ main {
 
 /* フッター */
 footer {
-  background-color: #B6D56A;
+  background-color: #54b32c;
   width: 100vw;
-  height: 36px;
+  height: auto;
   display: flex;
-  justify-content: end;
-  margin: auto 0;
+  flex-direction: column;
   align-items: center;
-  padding-right: 10%;
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+  gap: 16px;
+  margin: 32px auto 0;
+  padding: 0;
+}
+
+footer ul a {
+  text-decoration: none;
+  color: #fff;
+}
+
+footer ul li {
+  border-bottom: #fff 1px solid;
+}
+
+footer ul li:hover {
+  color: #626343;
+  border-bottom: #626343 1px solid;
 }
 
 footer p {
   display: inline-block;
-  margin: 0;
-  font-size: 12px;
+  color: #fff;
+  margin: 16px auto;
+  font-family: "Noto Sans JP", sans-serif;
+}
+
+footer small {
+  color: #fff;
+  margin: 16px 0 40px;
   font-family: "Noto Sans JP", sans-serif;
 }
