--- a/css/top-small.css
+++ b/css/top-small.css
@@ -657,6 +657,8 @@ footer ul {
 footer ul a {
   text-decoration: none;
   color: #fff;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 400;
 }
 
 footer ul li {
