--- a/css/top.css
+++ b/css/top.css
@@ -634,6 +634,8 @@ footer ul {
 footer ul a {
   text-decoration: none;
   color: #fff;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 400;
 }
 
 footer ul li {
