--- a/product/product-css/common-product.css
+++ b/product/product-css/common-product.css
@@ -368,6 +368,8 @@ footer ul {
 footer ul a {
   text-decoration: none;
   color: #626343;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 400;
 }
 
 footer ul li {
