--- a/product/product-css/product-small.css
+++ b/product/product-css/product-small.css
@@ -358,6 +358,8 @@ footer ul {
 footer ul a {
   text-decoration: none;
   color: #626343;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 400;
 }
 
 footer ul li {
