--- a/product/product-css/common-product.css
+++ b/product/product-css/common-product.css
@@ -137,6 +137,17 @@ main {
   border: none;
 }
 
+#visual .video-wrapper {
+  width: 100%;
+  max-width: 350px;
+  border-radius: 5px;
+  border: #BEB098 2px solid;
+  position: relative;
+  overflow: hidden;
+  flex-shrink: 0;
+  margin-bottom: 24px;
+}
+
 /* 作品紹介 */
 
 #explanation-wapper {
